comitt penultimo 2 logica de cliente y mecanico

--- a/TallerDeVehiculos/CapaPresentacion.csproj
+++ b/TallerDeVehiculos/CapaPresentacion.csproj
@@ -14,6 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CapaEntidad\CapaEntidad.csproj" />
+    <ProjectReference Include="..\CapaNegocio\CapaNegocio.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Frm_NewCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
