--- a/TallerDeVehiculos/CapaPresentacion.csproj
+++ b/TallerDeVehiculos/CapaPresentacion.csproj
@@ -39,4 +39,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Libs\Table.1.1.2.nupkg">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
