--- a/TallerDeVehiculos/CapaPresentacion.csproj
+++ b/TallerDeVehiculos/CapaPresentacion.csproj
@@ -41,7 +41,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Update="UC_Mechanic.cs">
+    <Compile Update="UC_Service.cs">
       <SubType>UserControl</SubType>
     </Compile>
   </ItemGroup>
