--- a/TallerDeVehiculos/CapaPresentacion.csproj
+++ b/TallerDeVehiculos/CapaPresentacion.csproj
@@ -36,6 +36,9 @@
     <Compile Update="Frm_NewCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="Frm_Comprobante.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
